@@ -1,3 +1,12 @@
+2011-03-16  Dimitri Glazkov  <dglazkov@chromium.org>
+
+        Reviewed by David Levin.
+
+        Improve robustness of controls-after-reload by seeking to the start explicitly at the end of the test.
+        https://bugs.webkit.org/show_bug.cgi?id=56491
+
+        * media/controls-after-reload.html: Added an extra step to seek to 0 before the end of the test.
+
 2011-03-16  Anders Carlsson  <andersca@apple.com>
 
         Reviewed by Adam Roben.
